# UGV-with-Robotic-Arm

./: LICENSE  map_1.py  target_estimation.py
UGV with arm control/: package.xml
UGV with arm control/nodes/: rosserial_python.py  turtle_translator.py
UGV with arm control/src/guin_e_turtle/: SerialClient.py
mobile_manipulator_full/: CMakeLists.txt  package.xml
mobile_manipulator_full/config/: arm_control.yaml  bot3_control.yaml  joint_names_sensebot_FullUrdf.yaml
mobile_manipulator_full/launch/: bot3_control.launch  bot3_launch.launch
mobile_manipulator_full/meshes/: link0.STL  link1.STL  link2.STL  link3.STL
mobile_manipulator_full/scripts/: bot_teleop.py  goal.py  goal_bot.py
mobile_manipulator_full/urdf/: bot3_urdf.urdf
mobile_manipulator_full/worlds/: mini.sdf
robot-arm-control-ros/launch/: simulate.launch
robot-arm-control-ros/robot-arm-control-arduino/: robot-arm-control-arduino.ino
